--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ hs_err_pid*
 /MauUDP/Server/dist/
 /MauUDP/Server/nbproject/private/
 /UDP/UDPMultiThread Client/nbproject/private/
+/UDP/UDPMultiThread Server/build/
+/UDP/UDPMultiThread Client/build/
