--- a/UDP/UDPMultiThread Server/nbproject/project.properties
+++ b/UDP/UDPMultiThread Server/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=multithread.server.MultiThreadServer
+main.class=multithread.server.UDPRunner
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
