--- a/TCP/MultiThread Client/nbproject/project.properties
+++ b/TCP/MultiThread Client/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/SingleThread_Server.jar
+dist.jar=${dist.dir}/MultiThread_Client.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=singlethread.tcpserver.TCPServer
+main.class=multithread.client.TCPMClient
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
